<resources>
    <string name="app_name">App4 Figuras Geometricas</string>

    <string name="Intro">Areas Fig. Geometricas</string>
    <string name="action_settings">Settings</string>

    <string name="RadioBcuad">Cuadrado</string>
    <string name="RadioBtriang">Triangulo</string>
    <string name="RadioBrect">Rectangulo</string>
    <string name="RadioBcirc">Circulo</string>

    <string name="ladoCuad">Lado</string>
    <string name="lado1triang">Lado 1</string>
    <string name="lado2triang">Lado 2</string>
    <string name="lado3triang">Lado 3</string>
    <string name="lado1rect">Lado Largo</string>
    <string name="lado2rect">Lado Corto</string>
    <string name="radiocirc">Radio</string>

    <string name="boton">Calcular</string>
    <string name="result">Resultado</string>







</resources>
