<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AreasFigGeom">

    <TextView
        android:text="@string/Intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:orientation="horizontal">
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioBcuad"
            android:id="@+id/radioCuad"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioBtriang"
            android:id="@+id/radioTriang"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioBrect"
            android:id="@+id/radioRect"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioBcirc"
            android:id="@+id/radioCirc"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ladoCuad"
            android:textSize="20sp"
            android:id="@+id/text1"/>

        <EditText
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:id="@+id/eNum1"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lado2rect"
            android:textSize="20sp"
            android:id="@+id/text2"
            android:visibility="invisible"
            />

        <EditText
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:id="@+id/eNum2"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lado3triang"
            android:textSize="20sp"
            android:id="@+id/text3"
            android:visibility="invisible"
            />

        <EditText
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:id="@+id/eNum3"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:orientation="horizontal">
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:id="@+id/button"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:orientation="horizontal">
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/tResult"
        android:textSize="50dp"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:textColor="@android:color/holo_red_dark"/>

</LinearLayout>
